WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33959
Don't call vgGetError()/eglGetError() repeatedly
https://bugs.webkit.org/show_bug.cgi?id=33959
Summary
Don't call vgGetError()/eglGetError() repeatedly
Jakob Petsovits
Reported
2010-01-21 10:45:56 PST
Don't call vgGetError()/eglGetError() repeatedly
Attachments
Patch
(9.50 KB, patch)
2010-01-21 10:48 PST
,
Jakob Petsovits
manyoso
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jakob Petsovits
Comment 1
2010-01-21 10:48:16 PST
Created
attachment 47130
[details]
Patch
Jakob Petsovits
Comment 2
2010-01-21 10:58:23 PST
While changing the VG/EGL error macros to something that reviewer Niko liked better, I introduced a bug in there. I thought I could be smart and get rid of the temporary variable that holds the error code, and tested it with eglGetError() on the OpenVG reference implementation to make sure it works. Turns out that wasn't the best idea. On the one hand, vgGetError() turns out to be specified differently than eglGetError() so it must only be called once in any case. On the other hand, eglGetError() turns out to be so vaguely specified that implementations and even EGL patron Khronos interprets the spec inconsistently. On a more positive note, if I hadn't introduced the bug in the first place, the SurfaceOpenVG pbuffer constructor (and the related EGLDisplayOpenVG::createPbufferSurface()) would have suffered from a subtle bug which is being taken care of in this patch as well. Please read the commit message too, and review. Thanks!
Adam Treat
Comment 3
2010-01-21 12:10:13 PST
Comment on
attachment 47130
[details]
Patch As discussed on irc, r=me with the removal of unused 'ASSERT_VG_NO_ERROR_VALUE'
Jakob Petsovits
Comment 4
2010-01-21 12:56:49 PST
Committed
r53639
: <
http://trac.webkit.org/changeset/53639
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug