WebCore/platform/graphics/openvg/SurfaceOpenVG.cpp
@@ -44,7 +44,7 @@ SurfaceOpenVG* SurfaceOpenVG::currentSurface()
 }
 
 #if PLATFORM(EGL)
-SurfaceOpenVG::SurfaceOpenVG(const IntSize& size, const EGLDisplay& display, EGLConfig* confPtr)
+SurfaceOpenVG::SurfaceOpenVG(const IntSize& size, const EGLDisplay& display, EGLConfig* confPtr, EGLint* errorCode)
     : m_eglDisplay(display)
     , m_eglSurface(EGL_NO_SURFACE)
     , m_eglContext(EGL_NO_CONTEXT)
@@ -53,7 +53,7 @@ SurfaceOpenVG::SurfaceOpenVG(const IntSize& size, const EGLDisplay& display, EGL
 
     EGLDisplayOpenVG* displayManager = EGLDisplayOpenVG::forDisplay(m_eglDisplay);
     EGLConfig config = confPtr ? (*confPtr) : displayManager->defaultPbufferConfig();
-    m_eglSurface = displayManager->createPbufferSurface(size, config);
+    m_eglSurface = displayManager->createPbufferSurface(size, config, errorCode);
 
     if (m_eglSurface == EGL_NO_SURFACE)
         return;
@@ -72,9 +72,7 @@ SurfaceOpenVG::SurfaceOpenVG(EGLNativeWindowType window, const EGLDisplay& displ
     EGLDisplayOpenVG* displayManager = EGLDisplayOpenVG::forDisplay(m_eglDisplay);
     EGLConfig config = confPtr ? (*confPtr) : displayManager->defaultWindowConfig();
     m_eglSurface = displayManager->surfaceForWindow(window, config);
-
-    if (m_eglSurface == EGL_NO_SURFACE)
-        return;
+    ASSERT(m_eglSurface != EGL_NO_SURFACE);
 
     m_eglContext = displayManager->contextForSurface(m_eglSurface);
     EGLDisplayOpenVG::registerPlatformSurface(this);
